# wargame-cartographer

./: .gitignore  CLAUDE.md  PLAN-cartography-counters.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
configs/examples/: eastern_front.yaml  normandy_hex.yaml  stalingrad.yaml  waterloo_spi.yaml
skills/wargame-map/: SKILL.md
src/wargame_cartographer/: __init__.py  cli.py  pipeline.py
src/wargame_cartographer/config/: defaults.py  map_spec.py
src/wargame_cartographer/geo/: downloader.py  elevation.py  projection.py  vector.py
src/wargame_cartographer/hex/: geojson.py  grid.py  sampler.py
src/wargame_cartographer/output/: game_data_exporter.py  html_exporter.py  static_exporter.py
src/wargame_cartographer/rendering/: cartouche_layer.py  elevation_layer.py  grid_layer.py  label_layer.py  module_panel.py  nato_layer.py  oob_panel.py  renderer.py  styles.py  symbol_layer.py  terrain_layer.py  vector_layer.py
src/wargame_cartographer/scenario/: __init__.py  models.py  writer.py
src/wargame_cartographer/terrain/: classifier.py  palette.py  types.py
