[project]
name = "wargame-cartographer"
version = "0.1.0"
description = "Generate historically accurate, playable wargame-style maps at any scale"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # Core rendering
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",

    # Projection and CRS
    "pyproj>=3.6.0",

    # Elevation data
    "rasterio>=1.3.0",

    # Vector data
    "requests>=2.31.0",
    "osmnx>=1.8.0",

    # Config
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",

    # Interactive output
    "folium>=0.15.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
wargame-map = "wargame_cartographer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wargame_cartographer"]
